Fix: 修正D-1計算錯誤

--- a/config/qmconfig.json
+++ b/config/qmconfig.json
@@ -508,16 +508,16 @@
     ],
     "D_2": [
       {
-        "title": "您沒有供氧能力不足的現象。"
+        "title": "目前沒有嚴重的慢性缺氧病狀，恭喜您！"
       },
       {
-        "title": "輕度供氧能力不足。"
+        "title": "已呈現「輕度慢性缺氧」。"
       },
       {
-        "title": "供氧能力不佳，容易發生缺氧。"
+        "title": "已呈現「中度慢性缺氧」。"
       },
       {
-        "title": "嚴重的供氧障礙，經常性缺氧。"
+        "title": "已呈現「重度慢性缺氧」。"
       }
     ],
     "D_3": [
