Modify: 調整報告頁畫面

--- a/config/qmconfig.json
+++ b/config/qmconfig.json
@@ -506,6 +506,11 @@
       7,
       10
     ],
+    "D_1": [
+      {
+        "title": "依據您的問卷填答資料，您的總缺氧指數為"
+      }
+    ],
     "D_2": [
       {
         "title": "目前沒有嚴重的慢性缺氧病狀，恭喜您！"
