modify: 修正單項分數10分時，沒有列入計算

--- a/config/qmconfig.json
+++ b/config/qmconfig.json
@@ -550,7 +550,7 @@
         "title": "主要表現出寒性體質症狀，缺氧病灶可能已積累相當長時日，應有身體機能失衡與衰退的問題。"
       },
       {
-        "title": ""
+        "title": "111"
       },
       {
         "title": "請持續留意有無供氧障礙或能量透支情形，避免形成缺氧病灶，成為慢性病的溫床。"
