modify: 檢驗報告頁 1.當沒有建議時設定預設文字。2. 縮短寒3,4,5建議文字

--- a/config/qmconfig.json
+++ b/config/qmconfig.json
@@ -426,19 +426,19 @@
           },
           {
             "qid": "1658763462",
-            "title": "記憶力明顯衰退時，請從簡易處開始進行健康改善。",
+            "title": "記憶力明顯衰退時，從簡易處開始進行健康改善。",
             "detail": "記憶力明顯衰退時，請正視自身健康問題，從簡而易行處開始，落實改善計劃。",
             "sort": 4
           },
           {
             "qid": "1040865437",
-            "title": "避免低血糖，多補充必需胺基酸與維他命E、B群。",
+            "title": "避免低血糖，多補充必需胺基酸、維他命E/B群。",
             "detail": "多補充乙醯膽鹼、酪胺酸、色胺酸等必須胺基酸、維他命B群、維他命E，鋅、鎂，並避免低血糖，可強化神經營養，避免失調。",
             "sort": 3
           },
           {
             "qid": "469705925",
-            "title": "培養壓力管理，焦慮恐慌時多做伸展運動，嚴重時請接受心理諮商。",
+            "title": "焦慮恐慌時多做伸展運動，培養壓力管理能力。",
             "detail": "長期高壓易使腦部缺氧退化、神經調節失衡，請培養壓力管理能力，焦慮恐慌時多做伸展運動，嚴重時請接受心理諮商輔導。",
             "sort": 1
           }
@@ -536,7 +536,7 @@
         "title": "建議您可不定時進行專家系統自我檢測，若有其他缺氧上的問題，歡迎與我們聯繫。"
       },
       {
-        "title": "    "
+        "title": ""
       }
     ],
     "D_4": [
@@ -550,7 +550,7 @@
         "title": "主要表現出寒性體質症狀，缺氧病灶可能已積累相當長時日，應有身體機能失衡與衰退的問題。"
       },
       {
-        "title": "111"
+        "title": ""
       },
       {
         "title": "請持續留意有無供氧障礙或能量透支情形，避免形成缺氧病灶，成為慢性病的溫床。"
