Modify: 問卷夜調整

--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
   "fid": "1FAIpQLSeX5u0zEiV5Ik9wsY2zm7XeEHOrD3_yN6mztdzVttHoMrikkw",
   "version": "1",
-  "systemField":[
+  "systemField": [
     {
-    "title":"塞入資料",
+      "title": "塞入資料",
       "question": [
         {
           "title": "USER優氧循環表",
@@ -17,10 +17,10 @@
         }
       ]
     }
-    ],
+  ],
   "inputField": [
     {
-    "title":"聯絡資訊",
+      "title": "聯絡資訊",
       "question": [
         {
           "title": "您的姓名",
@@ -35,35 +35,66 @@
       ]
     },
     {
-    "title":"寄到我的信箱",
+      "title": "寄到我的信箱",
       "question": [
         {
-          "title": "1. 您的收件電郵地址",
+          "title": "收件電郵地址",
           "qid": "643476795",
           "value": ""
         },
         {
-          "title": "2. 您的連絡電話",
+          "title": "連絡電話（選填）",
           "qid": "1939420278",
           "value": ""
-        }
-        ,
+        },
         {
-          "title": "3. 您的LINE ID",
+          "title": "LINE ID（選填）",
           "qid": "20496571",
           "value": ""
         }
       ]
     },
     {
-    "title":"服務人員",
+      "title": "服務人員",
       "question": [
         {
-          "title": "您的服務人員（客戶專用）",
+          "title": "您的服務人員或購買地點是：",
           "qid": "1974055469",
           "value": ""
         }
       ]
+    }
+  ],
+  "page": [
+    {
+      "title": "個人基本資料（必填）",
+      "subtitle": "請填寫您的真實姓名與出生年月日，作為您的個人化改善方案報告依據。",
+      "hint": "：hint"
+    },
+    {
+      "title": "缺氧原因：供給與耗損（共20題）",
+      "subtitle": "入不敷出就會缺乏，供不應求即為缺氧。瞭解缺氧原因，方能對症下藥。",
+      "hint": "缺氧原因：供給與耗損"
+    },
+    {
+      "title": "缺氧體質：熱濕寒（共13題）",
+      "subtitle": "紅腫熱痛？酸痛水腫？體寒畏冷？熱、濕、寒症狀常是慢性病的前兆，值得我們重視。",
+      "hint": "缺氧體質：熱濕寒"
+    },
+    {
+      "title": "落實改善方案：自控力（共6題）",
+      "subtitle": "難的不是改善方案，難的是如何持續落實。「缺乏自控力」往往是人們獲得成功最大的阻礙。",
+      "hint": "落實改善方案：自控力"
+    },
+    {
+      "title": "寄到我的信箱",
+      "subtitle": "若需要將個人化改善方案副本寄到您的電子信箱，請填寫下列資料，系統將於一小時內將副本回傳至您信箱中。",
+      "hint": "TBC"
+    },
+    {
+      "title": "聯絡服務人員（客戶專用）",
+      "subtitle": "如需進一步諮詢，待您收到改善方案後，可與您的服務人員聯繫。",
+      "hint": "TBC"
     }
   ],
   "session": [
@@ -71,52 +102,52 @@
       "title": "供給性缺氧",
       "question": [
         {
-          "title": "1. 常待在密閉、通風不良空間嗎？",
+          "title": "1 | 常待在密閉、通風不良空間嗎？",
           "qid": "1743046915",
           "value": ""
         },
         {
-          "title": "2. 常感到空氣污濁、令人不適嗎 (如空污、二手煙、廚房油煙)？",
+          "title": "2 | 常感到空氣污濁、令人不適嗎 (如空污、二手煙、廚房油煙)？",
           "qid": "1807423736",
           "value": ""
         },
         {
-          "title": "3. 經常鼻塞或氣喘嗎？",
+          "title": "3 | 經常鼻塞或氣喘嗎？",
           "qid": "1295839583",
           "value": ""
         },
         {
-          "title": "4. 是否有打呼或睡眠呼吸中止的問題？",
+          "title": "4 | 是否有打呼或睡眠呼吸中止的問題？",
           "qid": "950358200",
           "value": ""
         },
         {
-          "title": "5. 是否有貧血或失血的狀況？",
+          "title": "5 | 是否有貧血或失血的狀況？",
           "qid": "1311441209",
           "value": ""
         },
         {
-          "title": "6. 有抽菸的習慣嗎？",
+          "title": "6 | 有抽菸的習慣嗎？",
           "qid": "609807549",
           "value": ""
         },
         {
-          "title": "7. 有靜脈曲張、小腿腫漲等症狀嗎？",
+          "title": "7 | 有靜脈曲張、小腿腫漲等症狀嗎？",
           "qid": "222975878",
           "value": ""
         },
         {
-          "title": "8. 肌肉關節容易痠痛嗎？",
+          "title": "8 | 肌肉關節容易痠痛嗎？",
           "qid": "262205504",
           "value": ""
         },
         {
-          "title": "9. 是否常緊張焦慮、不自覺憋氣？ (任一狀況)",
+          "title": "9 | 是否常緊張焦慮、不自覺憋氣？ (任一狀況)",
           "qid": "203826713",
           "value": ""
         },
         {
-          "title": "10. 手指指腹處不飽滿而多皺摺？",
+          "title": "10 | 手指指腹處不飽滿而多皺摺？",
           "qid": "1146576352",
           "value": ""
         }
@@ -126,52 +157,52 @@
       "title": "耗損性缺氧",
       "question": [
         {
-          "title": "1. 經常連續超過12小時以上的情緒緊繃？",
+          "title": "11 | 經常連續超過12小時以上的情緒緊繃？",
           "qid": "822476452",
           "value": ""
         },
         {
-          "title": "2. 會易怒或情緒不穩定嗎？",
+          "title": "12 | 會易怒或情緒不穩定嗎？",
           "qid": "1800829108",
           "value": ""
         },
         {
-          "title": "3. 每日較為深度、安穩的入眠時間，常少於6小時？",
+          "title": "13 | 每日較為深度、安穩的入眠時間，常少於6小時？",
           "qid": "301839700",
           "value": ""
         },
         {
-          "title": "4. 會頭痛、胸悶(任一種狀況)嗎？",
+          "title": "14 | 會頭痛、胸悶(任一種狀況)嗎？",
           "qid": "1102651818",
           "value": ""
         },
         {
-          "title": "5. 常吃醃漬、油炸、加工食品、飲酒嗎？ (任一狀況)",
+          "title": "15 | 常吃醃漬、油炸、加工食品、飲酒嗎？ (任一狀況)",
           "qid": "2055994978",
           "value": ""
         },
         {
-          "title": "6. 有長期(連續三個月以上)且每日服用藥物嗎？(西、中藥皆是)",
+          "title": "16 | 有長期(連續三個月以上)且每日服用藥物嗎？(西、中藥皆是)",
           "qid": "1243132177",
           "value": ""
         },
         {
-          "title": "7. 常低燒、牙周病、胃痛或腹瀉嗎？ (任一狀況)",
+          "title": "17 | 常低燒、牙周病、胃痛或腹瀉嗎？ (任一狀況)",
           "qid": "130145679",
           "value": ""
         },
         {
-          "title": "8. 傷口癒合緩慢嗎？",
+          "title": "18 | 傷口癒合緩慢嗎？",
           "qid": "1310632678",
           "value": ""
         },
         {
-          "title": "9. 正餐之餘常吃宵夜、零食嗎？",
+          "title": "19 | 正餐之餘常吃宵夜、零食嗎？",
           "qid": "1614745379",
           "value": ""
         },
         {
-          "title": "10. 是否有腹部肥胖的問題呢？（女性腰圍大於80公分，男性腰圍大於90公分）",
+          "title": "20 | 是否有腹部肥胖的問題呢？（女性腰圍大於80公分，男性腰圍大於90公分）",
           "qid": "574479132",
           "value": ""
         }
@@ -181,22 +212,22 @@
       "title": "熱性體質",
       "question": [
         {
-          "title": "1. 會口乾、口臭、潰瘍、尿黃、便秘嗎？ (任一狀況)",
+          "title": "21 | 會口乾、口臭、潰瘍、尿黃、便秘嗎？ (任一狀況)",
           "qid": "1601545535",
           "value": ""
         },
         {
-          "title": "2. 會面紅、血壓高、感到燥熱嗎？ (任一狀況)",
+          "title": "22 | 會面紅、血壓高、感到燥熱嗎？ (任一狀況)",
           "qid": "531586703",
           "value": ""
         },
         {
-          "title": "3. 肌肉會酸痛、緊繃嗎？",
+          "title": "23 | 肌肉會酸痛、緊繃嗎？",
           "qid": "1200945384",
           "value": ""
         },
         {
-          "title": "4. 容易出痘、出油嗎？",
+          "title": "24 | 容易出痘、出油嗎？",
           "qid": "556802853",
           "value": ""
         }
@@ -206,22 +237,22 @@
       "title": "濕性體質",
       "question": [
         {
-          "title": "1. 有水腫的現象嗎？",
+          "title": "25 | 有水腫的現象嗎？",
           "qid": "1053352881",
           "value": ""
         },
         {
-          "title": "2. 身體某局部區域會長時間疼痛、腫漲、僵硬嗎？",
+          "title": "26 | 身體某局部區域會長時間疼痛、腫漲、僵硬嗎？",
           "qid": "1870497511",
           "value": ""
         },
         {
-          "title": "3. 有腹瀉、泌尿疾病、皮膚疾病嗎？ (任一狀況)",
+          "title": "27 | 有腹瀉、泌尿疾病、皮膚疾病嗎？ (任一狀況)",
           "qid": "1078974454",
           "value": ""
         },
         {
-          "title": "4. 有痰多、咳嗽、乏力、容易喘氣等困擾嗎？ (任一狀況)",
+          "title": "28 | 有痰多、咳嗽、乏力、容易喘氣等困擾嗎？ (任一狀況)",
           "qid": "1678997620",
           "value": ""
         }
@@ -231,27 +262,27 @@
       "title": "寒性體質",
       "question": [
         {
-          "title": "1. 會畏寒、四肢冰冷嗎？",
+          "title": "29 |  會畏寒、四肢冰冷嗎？",
           "qid": "1472456453",
           "value": ""
         },
         {
-          "title": "2. 容易生病或久病不癒嗎？",
+          "title": "30 | 容易生病或久病不癒嗎？",
           "qid": "714225019",
           "value": ""
         },
         {
-          "title": "3. 有記憶力衰退，未老先衰的問題嗎？",
+          "title": "31 | 有記憶力衰退，未老先衰的問題嗎？",
           "qid": "1658763462",
           "value": ""
         },
         {
-          "title": "4. 會突然性的頭暈、眼花、耳鳴嗎？",
+          "title": "32 | 會突然性的頭暈、眼花、耳鳴嗎？",
           "qid": "1040865437",
           "value": ""
         },
         {
-          "title": "5. 會突然焦慮、恐慌、心悸嗎？",
+          "title": "33 | 會突然焦慮、恐慌、心悸嗎？",
           "qid": "469705925",
           "value": ""
         }
@@ -261,32 +292,32 @@
       "title": "自控力",
       "question": [
         {
-          "title": "1. 對於完成目標，好像沒有急迫性；或有更重要的事，所以沒有做？",
+          "title": "34 | 對於完成目標，好像沒有急迫性；或有更重要的事，所以沒有做？",
           "qid": "1136756190",
           "value": ""
         },
         {
-          "title": "2. 眼前有重要的事要處理，但沒來由的就會被身旁事物吸引，或覺得需要更多準備，遲遲不展開行動？",
+          "title": "35 | 眼前有重要的事要處理，但沒來由的就會被身旁事物吸引，或覺得需要更多準備，遲遲不展開行動？",
           "qid": "563238320",
           "value": ""
         },
         {
-          "title": "3. 試過很多方法都失敗，覺得自己就是懶，就是欠缺自控力？",
+          "title": "36 | 試過很多方法都失敗，覺得自己就是懶，就是欠缺自控力？",
           "qid": "1361355678",
           "value": ""
         },
         {
-          "title": "4. 經常有一些環境、時間、地點上的不方便，所以沒有執行？",
+          "title": "37 | 經常有一些環境、時間、地點上的不方便，所以沒有執行？",
           "qid": "1159602739",
           "value": ""
         },
         {
-          "title": "5. 有時想做些改變，但看看周遭、問問朋友，又覺得還是算了？",
+          "title": "38 | 有時想做些改變，但看看周遭、問問朋友，又覺得還是算了？",
           "qid": "1553766587",
           "value": ""
         },
         {
-          "title": "6. 對達成目標很有熱情，但熱情無法長期持續。例如買了一年的健身會員，半年後開始意興闌珊？",
+          "title": "39 | 對達成目標很有熱情，但熱情無法長期持續。例如買了一年的健身會員，半年後開始意興闌珊？",
           "qid": "1688795117",
           "value": ""
         }
