--- a/config/config.json
+++ b/config/config.json
@@ -23,12 +23,12 @@
       "title": "聯絡資訊",
       "question": [
         {
-          "title": "您的姓名",
+          "title": "姓名",
           "qid": "1028026856",
           "value": ""
         },
         {
-          "title": "您的西元出生年月日",
+          "title": "西元出生年月日",
           "qid": "618980278",
           "value": ""
         }
