modify: rollback檢查iPad報告頁跑版 2

--- a/config/qmconfig.json
+++ b/config/qmconfig.json
@@ -461,7 +461,7 @@
           },
           {
             "qid": "1553766587",
-            "title": "請週遭人給予正面鼓勵。注意！不要請他人幫忙催促自己。",
+            "title": "請週遭人給予正面鼓勵。不要請他人幫忙催促自己。",
             "detail": "人際支持：執行計劃或階段性成功時，身邊親友可給予正面的鼓勵或讚美。 注意！不要請他人幫忙催促自己，經常會造成反效果。",
             "sort": 2
           },
