modify: 修改問卷頁文字wording

--- a/config/config.json
+++ b/config/config.json
@@ -58,7 +58,7 @@
       "title": "服務人員",
       "question": [
         {
-          "title": "您的服務人員或購買地點是：",
+          "title": "您的服務人員或購買地點是（選填）：",
           "qid": "1974055469",
           "value": ""
         }
