--- a/config/qmconfig.json
+++ b/config/qmconfig.json
@@ -86,7 +86,7 @@
             "title": "輕度的機能下降。"
           },
           {
-            "title": "中度機能下降，自律神經失調引起器官機能易常。"
+            "title": "中度機能下降，自律神經失調引起器官機能異常。"
           },
           {
             "title": "挖東牆補西牆，能量分配失衡令部份器官機能明顯衰退。情緒障礙及大腦神經病變的風險提高。"
