--- a/config/qmconfig.json
+++ b/config/qmconfig.json
@@ -18,10 +18,10 @@
             "title": "輕度供氧能力不足。"
           },
           {
-            "title": "供氧能力不佳，容易發生缺氧。"
+            "title": "供氧能力不佳，容易發生缺氧。改善方法請見「供氧治療」。"
           },
           {
-            "title": "嚴重的供氧障礙，經常性缺氧。"
+            "title": "嚴重的供氧障礙，經常性缺氧。改善方法請見「供氧治療」。"
           }
         ]
       },
@@ -35,10 +35,10 @@
             "title": "輕度能量透支。"
           },
           {
-            "title": "中度能量透支，消耗器官儲備。"
+            "title": "中度能量透支，消耗器官儲備。改善方法請見「耗氧治療」。"
           },
           {
-            "title": "嚴重能量透支，易形成缺氧病灶。"
+            "title": "嚴重能量透支，易形成缺氧病灶。改善方法請見「耗氧治療」。"
           }
         ]
       },
@@ -49,18 +49,18 @@
             "title": "您沒有熱性發炎損傷問題。"
           },
           {
-            "title": "代謝毒素偏高，細胞損傷，引起免疫發炎燥熱現象。"
+            "title": "輕度毒素累積。代謝毒素易使細胞損傷，嚴重時將刺激慢性發炎。"
           },
           {
-            "title": "體內毒素過高，免疫系統活躍，易引起不適症狀。"
+            "title": "代謝毒素偏高，免疫系統活躍，易引起發炎燥熱不適症狀。改善方法請見「免疫治療」。"
           },
           {
-            "title": "體內毒素累積，免疫系統亢進，易引起組織損傷。炎症、癌症的風險提高。"
+            "title": "體內毒素累積，免疫系統亢進，易引起組織損傷。炎症、癌症的風險提高。改善方法請見「免疫治療」。"
           }
         ]
       },
       {
-        "MEMO": "耗損性缺氧",
+        "MEMO": "濕性體質",
         "question": [
           {
             "title": "您沒有溼性循環障礙問題。"
@@ -69,15 +69,15 @@
             "title": "輕度血液循環不良。"
           },
           {
-            "title": "中度循環障礙，營養供給及代謝廢物排泄困難。"
+            "title": "中度循環障礙，營養供給及代謝欠佳。改善方法請見「微循環治療」。"
           },
           {
-            "title": "重度循環障礙，血液瘀滯，血管出現堵塞、發炎、損傷。代謝症候群的風險提高。"
+            "title": "重度循環障礙，血液瘀滯，血管出現堵塞、發炎、損傷。代謝症候群的風險提高。改善方法請見「微循環治療」。"
           }
         ]
       },
       {
-        "MEMO": "耗損性缺氧",
+        "MEMO": "寒性體質",
         "question": [
           {
             "title": "您沒有寒性機能衰退問題。"
@@ -86,10 +86,10 @@
             "title": "輕度的機能下降。"
           },
           {
-            "title": "中度機能下降，自律神經失調引起器官機能異常。"
+            "title": "中度機能下降，自律神經失調引起器官機能異常。改善方法請見「機能復甦」。"
           },
           {
-            "title": "挖東牆補西牆，能量分配失衡令部份器官機能明顯衰退。情緒障礙及大腦神經病變的風險提高。"
+            "title": "挖東牆補西牆，能量分配失衡令部份器官機能明顯衰退。情緒障礙及大腦神經病變的風險提高。改善方法請見「機能復甦」。"
           }
         ]
       }
