modify: 調整報告頁格式(1. 截圖上下縮 2.D區文字 3. 截圖左右空白)

--- a/config/qmconfig.json
+++ b/config/qmconfig.json
@@ -508,21 +508,21 @@
     ],
     "D_1": [
       {
-        "title": "依據您的問卷填答資料，您的總缺氧指數為"
+
       }
     ],
     "D_2": [
       {
-        "title": "目前沒有嚴重的慢性缺氧病狀，恭喜您！"
+        "title": "，目前沒有嚴重的慢性缺氧病狀，恭喜您！"
       },
       {
-        "title": "已呈現「輕度慢性缺氧」。"
+        "title": "，已呈現「輕度慢性缺氧」。"
       },
       {
-        "title": "已呈現「中度慢性缺氧」。"
+        "title": "，已呈現「中度慢性缺氧」。"
       },
       {
-        "title": "已呈現「重度慢性缺氧」。"
+        "title": "，已呈現「重度慢性缺氧」。"
       }
     ],
     "D_3": [
