--- a/config/config.json
+++ b/config/config.json
@@ -102,61 +102,80 @@
       "title": "供給性缺氧",
       "question": [
         {
-          "title": "1 | 常待在密閉、通風不良空間嗎？",
+          "hint": "缺氧原因：供給與耗損（1/20）",
+          "number": "1 | ",
+          "title": "常待在密閉、通風不良空間嗎？",
           "qid": "1743046915",
           "value": "",
           "type": "A"
         },
         {
-          "title": "2 | 常感到空氣污濁、令人不適嗎 (如空污、二手煙、廚房油煙)？",
+          "hint": "缺氧原因：供給與耗損（2/20）",
+          "number": "2 | ",
+          "title": "常感到空氣污濁、令人不適嗎 (如空污、二手煙、廚房油煙)？",
           "qid": "1807423736",
           "value": "",
           "type": "A"
         },
         {
-          "title": "3 | 經常鼻塞或氣喘嗎？",
+          "hint": "缺氧原因：供給與耗損（3/20）",
+          "number": "3 | ",
+          "title": "經常鼻塞或氣喘嗎？",
           "qid": "1295839583",
           "value": "",
           "type": "A"
         },
         {
-          "title": "4 | 是否有打呼或睡眠呼吸中止的問題？",
+          "hint": "缺氧原因：供給與耗損（4/20）",
+          "number": "4 | ",
+          "title": "是否有打呼或睡眠呼吸中止的問題？",
           "qid": "950358200",
           "value": "",
           "type": "A"
         },
         {
-          "title": "5 | 是否有貧血或失血的狀況？",
+          "hint": "缺氧原因：供給與耗損（5/20）",
+          "number": "5 | ",
+          "title": "是否有貧血或失血的狀況？",
           "qid": "1311441209",
           "value": "",
           "type": "A"
         },
         {
-          "title": "6 | 有抽菸的習慣嗎？",
+          "hint": "缺氧原因：供給與耗損（6/20）",
+          "number": "6 | ",
+          "title": "有抽菸的習慣嗎？",
           "qid": "609807549",
           "value": "",
           "type": "A"
         },
-        {
-          "title": "7 | 有靜脈曲張、小腿腫漲等症狀嗎？",
+        {"hint": "缺氧原因：供給與耗損（7/20）",
+          "number": "7 | ",
+          "title": "有靜脈曲張、小腿腫漲等症狀嗎？",
           "qid": "222975878",
           "value": "",
           "type": "A"
         },
         {
-          "title": "8 | 肌肉關節容易痠痛嗎？",
+          "hint": "缺氧原因：供給與耗損（8/20）",
+          "number": "8 | ",
+          "title": "肌肉關節容易痠痛嗎？",
           "qid": "262205504",
           "value": "",
           "type": "A"
         },
         {
-          "title": "9 | 是否常緊張焦慮、不自覺憋氣？ (任一狀況)",
+          "hint": "缺氧原因：供給與耗損（9/20）",
+          "number": "9 | ",
+          "title": "是否常緊張焦慮、不自覺憋氣？ (任一狀況)",
           "qid": "203826713",
           "value": "",
           "type": "A"
         },
         {
-          "title": "10 | 手指指腹處不飽滿而多皺摺？",
+          "hint": "缺氧原因：供給與耗損（10/20）",
+          "number": "10 | ",
+          "title": "手指指腹處不飽滿而多皺摺？",
           "qid": "1146576352",
           "value": "",
           "type": "A"
@@ -167,61 +186,81 @@
       "title": "耗損性缺氧",
       "question": [
         {
-          "title": "11 | 經常連續超過12小時以上的情緒緊繃？",
+          "hint": "缺氧原因：供給與耗損（11/20）",
+          "number": "11 | ",
+          "title": "經常連續超過12小時以上的情緒緊繃？",
           "qid": "822476452",
           "value": "",
           "type": "A"
         },
         {
-          "title": "12 | 會易怒或情緒不穩定嗎？",
+          "hint": "缺氧原因：供給與耗損（12/20）",
+          "number": "12 | ",
+          "title": "會易怒或情緒不穩定嗎？",
           "qid": "1800829108",
           "value": "",
           "type": "A"
         },
         {
-          "title": "13 | 每日較為深度、安穩的入眠時間，常少於6小時？",
+          "hint": "缺氧原因：供給與耗損（13/20）",
+          "number": "13 | ",
+          "title": "每日較為深度、安穩的入眠時間，常少於6小時？",
           "qid": "301839700",
           "value": "",
           "type": "A"
         },
         {
-          "title": "14 | 會頭痛、胸悶(任一種狀況)嗎？",
+          "hint": "缺氧原因：供給與耗損（14/20）",
+          "number": "14 | ",
+          "title": "會頭痛、胸悶(任一種狀況)嗎？",
           "qid": "1102651818",
           "value": "",
           "type": "A"
         },
         {
-          "title": "15 | 常吃醃漬、油炸、加工食品、飲酒嗎？ (任一狀況)",
+          "hint": "缺氧原因：供給與耗損（15/20）",
+          "number": "15 | ",
+          "title": "常吃醃漬、油炸、加工食品、飲酒嗎？ (任一狀況)",
           "qid": "2055994978",
           "value": "",
           "type": "A"
         },
         {
-          "title": "16 | 有長期(連續三個月以上)且每日服用藥物嗎？(西、中藥皆是)",
+          "hint": "缺氧原因：供給與耗損（16/20）",
+          "number": "16 | ",
+          "title": "有長期(連續三個月以上)且每日服用藥物嗎？(西、中藥皆是)",
           "qid": "1243132177",
           "value": "",
           "type": "A"
         },
         {
-          "title": "17 | 常低燒、牙周病、胃痛或腹瀉嗎？ (任一狀況)",
+          "hint": "缺氧原因：供給與耗損（17/20）",
+          "number": "17 | ",
+          "title": "常低燒、牙周病、胃痛或腹瀉嗎？ (任一狀況)",
           "qid": "130145679",
           "value": "",
           "type": "A"
         },
         {
-          "title": "18 | 傷口癒合緩慢嗎？",
+          "hint": "缺氧原因：供給與耗損（18/20）",
+          "number": "18 | ",
+          "title": "傷口癒合緩慢嗎？",
           "qid": "1310632678",
           "value": "",
           "type": "A"
         },
         {
-          "title": "19 | 正餐之餘常吃宵夜、零食嗎？",
+          "hint": "缺氧原因：供給與耗損（19/20）",
+          "number": "19 | ",
+          "title": "正餐之餘常吃宵夜、零食嗎？",
           "qid": "1614745379",
           "value": "",
           "type": "A"
         },
         {
-          "title": "20 | 是否有腹部肥胖的問題呢？（女性腰圍大於80公分，男性腰圍大於90公分）",
+          "hint": "缺氧原因：供給與耗損（20/20）",
+          "number": "20 | ",
+          "title": "是否有腹部肥胖的問題呢？（女性腰圍大於80公分，男性腰圍大於90公分）",
           "qid": "574479132",
           "value": "",
           "type": "B"
@@ -232,25 +271,33 @@
       "title": "熱性體質",
       "question": [
         {
-          "title": "21 | 會口乾、口臭、潰瘍、尿黃、便秘嗎？ (任一狀況)",
+          "hint": "缺氧體質：熱濕寒（1/13）",
+          "number": "21 | ",
+          "title": "會口乾、口臭、潰瘍、尿黃、便秘嗎？ (任一狀況)",
           "qid": "1601545535",
           "value": "",
           "type": "A"
         },
         {
-          "title": "22 | 會面紅、血壓高、感到燥熱嗎？ (任一狀況)",
+          "hint": "缺氧體質：熱濕寒（2/13）",
+          "number": "22 | ",
+          "title": "會面紅、血壓高、感到燥熱嗎？ (任一狀況)",
           "qid": "531586703",
           "value": "",
           "type": "A"
         },
         {
-          "title": "23 | 肌肉會酸痛、緊繃嗎？",
+          "hint": "缺氧體質：熱濕寒（3/13）",
+          "number": "23 | ",
+          "title": "肌肉會酸痛、緊繃嗎？",
           "qid": "1200945384",
           "value": "",
           "type": "A"
         },
         {
-          "title": "24 | 容易出痘、出油嗎？",
+          "hint": "缺氧體質：熱濕寒（4/13）",
+          "number": "24 | ",
+          "title": "容易出痘、出油嗎？",
           "qid": "556802853",
           "value": "",
           "type": "A"
@@ -261,25 +308,33 @@
       "title": "濕性體質",
       "question": [
         {
-          "title": "25 | 有水腫的現象嗎？",
+          "hint": "缺氧體質：熱濕寒（5/13）",
+          "number": "25 | ",
+          "title": "有水腫的現象嗎？",
           "qid": "1053352881",
           "value": "",
           "type": "A"
         },
         {
-          "title": "26 | 身體某局部區域會長時間疼痛、腫漲、僵硬嗎？",
+          "hint": "缺氧體質：熱濕寒（6/13）",
+          "number": "26 | ",
+          "title": "身體某局部區域會長時間疼痛、腫漲、僵硬嗎？",
           "qid": "1870497511",
           "value": "",
           "type": "A"
         },
         {
-          "title": "27 | 有腹瀉、泌尿疾病、皮膚疾病嗎？ (任一狀況)",
+          "hint": "缺氧體質：熱濕寒（7/13）",
+          "number": "27 | ",
+          "title": "有腹瀉、泌尿疾病、皮膚疾病嗎？ (任一狀況)",
           "qid": "1078974454",
           "value": "",
           "type": "A"
         },
         {
-          "title": "28 | 有痰多、咳嗽、乏力、容易喘氣等困擾嗎？ (任一狀況)",
+          "hint": "缺氧體質：熱濕寒（8/13）",
+          "number": "28 | ",
+          "title": "有痰多、咳嗽、乏力、容易喘氣等困擾嗎？ (任一狀況)",
           "qid": "1678997620",
           "value": "",
           "type": "A"
@@ -290,31 +345,41 @@
       "title": "寒性體質",
       "question": [
         {
-          "title": "29 |  會畏寒、四肢冰冷嗎？",
+          "hint": "缺氧體質：熱濕寒（9/13）",
+          "number": "29 | ",
+          "title": "會畏寒、四肢冰冷嗎？",
           "qid": "1472456453",
           "value": "",
           "type": "A"
         },
         {
-          "title": "30 | 容易生病或久病不癒嗎？",
+          "hint": "缺氧體質：熱濕寒（10/13）",
+          "number": "30 | ",
+          "title": "容易生病或久病不癒嗎？",
           "qid": "714225019",
           "value": "",
           "type": "A"
         },
         {
-          "title": "31 | 有記憶力衰退，未老先衰的問題嗎？",
+          "hint": "缺氧體質：熱濕寒（11/13）",
+          "number": "31 | ",
+          "title": "有記憶力衰退，未老先衰的問題嗎？",
           "qid": "1658763462",
           "value": "",
           "type": "A"
         },
         {
-          "title": "32 | 會突然性的頭暈、眼花、耳鳴嗎？",
+          "hint": "缺氧體質：熱濕寒（12/13）",
+          "number": "32 | ",
+          "title": "會突然性的頭暈、眼花、耳鳴嗎？",
           "qid": "1040865437",
           "value": "",
           "type": "A"
         },
         {
-          "title": "33 | 會突然焦慮、恐慌、心悸嗎？",
+          "hint": "缺氧體質：熱濕寒（13/13）",
+          "number": "33 | ",
+          "title": "會突然焦慮、恐慌、心悸嗎？",
           "qid": "469705925",
           "value": "",
           "type": "A"
@@ -325,37 +390,49 @@
       "title": "自控力",
       "question": [
         {
-          "title": "34 | 對於完成目標，好像沒有急迫性；或有更重要的事，所以沒有做？",
+          "hint": "落實改善方案：自控力（1/6）",
+          "number": "34 | ",
+          "title": "對於完成目標，好像沒有急迫性；或有更重要的事，所以沒有做？",
           "qid": "1136756190",
           "value": "",
           "type": "A"
         },
         {
-          "title": "35 | 眼前有重要的事要處理，但沒來由的就會被身旁事物吸引，或覺得需要更多準備，遲遲不展開行動？",
+          "hint": "落實改善方案：自控力（2/6）",
+          "number": "35 | ",
+          "title": "眼前有重要的事要處理，但沒來由的就會被身旁事物吸引，或覺得需要更多準備，遲遲不展開行動？",
           "qid": "563238320",
           "value": "",
           "type": "A"
         },
         {
-          "title": "36 | 試過很多方法都失敗，覺得自己就是懶，就是欠缺自控力？",
+          "hint": "落實改善方案：自控力（3/6）",
+          "number": "36 | ",
+          "title": "試過很多方法都失敗，覺得自己就是懶，就是欠缺自控力？",
           "qid": "1361355678",
           "value": "",
           "type": "A"
         },
         {
-          "title": "37 | 經常有一些環境、時間、地點上的不方便，所以沒有執行？",
+          "hint": "落實改善方案：自控力（4/6）",
+          "number": "37 | ",
+          "title": "經常有一些環境、時間、地點上的不方便，所以沒有執行？",
           "qid": "1159602739",
           "value": "",
           "type": "A"
         },
         {
-          "title": "38 | 有時想做些改變，但看看周遭、問問朋友，又覺得還是算了？",
+          "hint": "落實改善方案：自控力（5/6）",
+          "number": "38 | ",
+          "title": "有時想做些改變，但看看周遭、問問朋友，又覺得還是算了？",
           "qid": "1553766587",
           "value": "",
           "type": "A"
         },
         {
-          "title": "39 | 對達成目標很有熱情，但熱情無法長期持續。例如買了一年的健身會員，半年後開始意興闌珊？",
+          "hint": "落實改善方案：自控力（6/6）",
+          "number": "39 | ",
+          "title": "對達成目標很有熱情，但熱情無法長期持續。例如買了一年的健身會員，半年後開始意興闌珊？",
           "qid": "1688795117",
           "value": "",
           "type": "A"
