modify: 調整錯誤訊息

--- a/config/config.json
+++ b/config/config.json
@@ -69,22 +69,22 @@
     {
       "title": "個人基本資料（必填）",
       "subtitle": "請填寫您的真實姓名與出生年月日，作為您的個人化改善方案報告依據。",
-      "hint": "：hint"
+      "hint": "TBC"
     },
     {
       "title": "缺氧原因：供給與耗損（共20題）",
       "subtitle": "入不敷出就會缺乏，供不應求即為缺氧。瞭解缺氧原因，方能對症下藥。",
-      "hint": "缺氧原因：供給與耗損"
+      "hint": "TBC"
     },
     {
       "title": "缺氧體質：熱濕寒（共13題）",
       "subtitle": "紅腫熱痛？酸痛水腫？體寒畏冷？熱、濕、寒症狀常是慢性病的前兆，值得我們重視。",
-      "hint": "缺氧體質：熱濕寒"
+      "hint": "TBC"
     },
     {
       "title": "落實改善方案：自控力（共6題）",
       "subtitle": "難的不是改善方案，難的是如何持續落實。「缺乏自控力」往往是人們獲得成功最大的阻礙。",
-      "hint": "落實改善方案：自控力"
+      "hint": "TBC"
     },
     {
       "title": "寄到我的信箱",
