--- a/config/qmconfig.json
+++ b/config/qmconfig.json
@@ -513,44 +513,44 @@
     ],
     "D_2": [
       {
-        "title": "，目前沒有嚴重的慢性缺氧病狀，恭喜您！"
+        "title": "：無顯著缺氧症狀"
       },
       {
-        "title": "，已呈現「輕度慢性缺氧」。"
+        "title": "：輕度慢性缺氧"
       },
       {
-        "title": "，已呈現「中度慢性缺氧」。"
+        "title": "：中度慢性缺氧"
       },
       {
-        "title": "，已呈現「重度慢性缺氧」。"
+        "title": "：重度慢性缺氧"
       }
     ],
     "D_3": [
       {
-        "title": "缺氧主因是供氧不足，"
+        "title": "您有供給性缺氧現象，供氧能力不佳，"
       },
       {
-        "title": "缺氧主因是耗氧過量，"
+        "title": "您有耗損性缺氧現象，能量透支過高，"
       },
       {
-        "title": "建議您可不定時進行專家系統自我檢測，若有其他缺氧上的問題，歡迎與我們聯繫。"
+        "title": ""
       },
       {
-        "title": "　　"
+        "title": ""
       }
     ],
     "D_4": [
       {
-        "title": "主要表現出熱性體質症狀，應有慢性發炎問題。"
+        "title": "代謝毒素累積易使細胞損傷，引起慢性發炎的燥熱現象，提高癌症、炎症風險。"
       },
       {
-        "title": "主要表現出濕性體質症狀，應有微循環障礙與慢性發炎的問題。"
+        "title": "細胞缺氧易引起微循環障礙，造成心血管損傷，提高三高等代謝症侯群風險。"
       },
       {
-        "title": "主要表現出寒性體質症狀，缺氧病灶可能已積累相當長時日，應有身體機能失衡與衰退的問題。"
+        "title": "可用能量不足易使自律神經失調、器官機能衰退，提高功能性疾病與大腦神經病變風險。"
       },
       {
-        "title": ""
+        "title": "建議您可不定時進行專家系統自我檢測，若有其他缺氧上的問題，歡迎與我們聯繫。"
       },
       {
         "title": "請持續留意有無供氧障礙或能量透支情形，避免形成缺氧病灶，成為慢性病的溫床。"
