--- a/config/qmconfig.json
+++ b/config/qmconfig.json
@@ -513,16 +513,16 @@
     ],
     "D_2": [
       {
-        "title": "：無顯著缺氧症狀"
+        "title": "，無顯著缺氧症狀"
       },
       {
-        "title": "：輕度慢性缺氧"
+        "title": "，輕度慢性缺氧"
       },
       {
-        "title": "：中度慢性缺氧"
+        "title": "，中度慢性缺氧"
       },
       {
-        "title": "：重度慢性缺氧"
+        "title": "，重度慢性缺氧"
       }
     ],
     "D_3": [
