--- a/config/qmconfig.json
+++ b/config/qmconfig.json
@@ -533,7 +533,7 @@
         "title": "您有耗損性缺氧現象，能量透支過高，"
       },
       {
-        "title": ""
+        "title": "系統測試中，錯誤請包涵"
       },
       {
         "title": "主觀上無明顯缺氧原因，但"
