--- a/config/qmconfig.json
+++ b/config/qmconfig.json
@@ -533,7 +533,7 @@
         "title": "您有耗損性缺氧現象，能量透支過高，"
       },
       {
-        "title": "系統測試中，錯誤請包涵"
+        "title": ""
       },
       {
         "title": "主觀上無明顯缺氧原因，但"
@@ -550,7 +550,7 @@
         "title": "可用能量不足易使自律神經失調、器官機能衰退，提高功能性疾病與大腦神經病變風險。"
       },
       {
-        "title": "您目前很健康！建議可不定時進行專家系統檢測，若有其他缺氧上的問題，歡迎與我們聯繫。"
+        "title": "建議您可不定時進行專家系統檢測，若有其他缺氧上的問題，歡迎與我們聯繫。"
       },
       {
         "title": "請持續留意有無供氧障礙或能量透支情形，避免形成缺氧病灶，成為慢性病的溫床。"
