--- a/config/config.json
+++ b/config/config.json
@@ -88,7 +88,7 @@
     },
     {
       "title": "寄到我的信箱(暫停使用)",
-      "subtitle": "因系統更新，此功能暫時無法使用。您可先留下信箱，待更新完成後會再補寄給您",
+      "subtitle": "因系統更新，此功能暫時無法使用。您可先留下信箱，待更新完成後會再補寄給您。",
       "hint": "TBC"
     },
     {
