--- a/config/config.json
+++ b/config/config.json
@@ -87,8 +87,8 @@
       "hint": "TBC"
     },
     {
-      "title": "寄到我的信箱(暫停使用)",
-      "subtitle": "因系統更新，此功能暫時無法使用。您可先留下信箱，待更新完成後會再補寄給您。",
+      "title": "寄到我的信箱",
+      "subtitle": "系統將於一小時後將個人化改善方案副本回傳至您的信箱中。",
       "hint": "TBC"
     },
     {
